apps/kguardian/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "kguardian"
    gethomepage.dev/description: "Kubernetes Security Profile Generator"
    gethomepage.dev/group: "Security"
    gethomepage.dev/icon: "kguardian.png"
    gethomepage.dev/weight: "30"
spec:
  hostnames:
    - kguardian.${SECRET_INTERNAL_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: networking
  rules:
    - backendRefs:
        - name: kguardian-frontend
          namespace: kguardian
          port: 5173
